[package]
name = "revelio-cli"
version = "0.1.3"
authors = ["Francois Best <contact@francoisbest.com>"]
edition = "2018"
publish = false

[[bin]]
name = "revelio"
path = "./src/main.rs"

[dependencies]
custom_error = "1.6.0"
envy = "0.4.0"
log = "0.4.6"
reqwest = "0.9.12"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
structopt = "0.2.15"
chrono = "0.4.6"
mkdirp = "0.1.0"
revelio = { path = "../revelio" }
sha2 = "0.8.0"
base64 = "0.10.1"
rayon = "1.0.3"
