[package]
name = "revelio-cli"
version = "0.1.2"
authors = ["Francois Best <contact@francoisbest.com>"]
edition = "2018"
publish = false

[[bin]]
name = "revelio"
path = "./src/main.rs"

[dependencies]
envy = "0.4.0"
mkdirp = "0.1.0"
rayon = "1.0.3"
reqwest = "0.9.12"
revelio = { path = "../revelio" }
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
structopt = "0.2.15"
