[package]
name = "revelio"
version = "0.1.0"
authors = ["Francois Best <francois@francoisbest.com>"]
edition = "2018"

[dependencies]
custom_error = "1.6.0"
envy = "0.4.0"
log = "0.4.6"
reqwest = "0.9.11"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
structopt = "0.2.15"
chrono = "0.4.6"
mkdirp = "0.1.0"
niffler = { path = "../lib/niffler" }
reducto = { path = "../lib/reducto" }
